--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "jquery": "^3.5.1",
+    "less-loader": "^5.0.0",
     "vue": "^2.6.12"
   },
   "devDependencies": {
     "css-loader": "^4.3.0",
     "html-webpack-plugin": "^4.4.1",
-    "node-sass": "^4.14.1",
+    "less": "^4.1.3",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
     "vue-loader": "^15.9.6",
