--- a/package.json
+++ b/package.json
@@ -10,21 +10,20 @@
     "build": "webpack"
   },
   "dependencies": {
-    "jquery": "^3.5.1",
+    "jquery": "3.5.1",
     "less-loader": "^5.0.0",
-    "vue": "^2.6.12"
+    "vue": "2.6.12"
   },
   "devDependencies": {
-    "css-loader": "^4.3.0",
-    "html-webpack-plugin": "^4.4.1",
-    "less": "^4.1.3",
-    "sass-loader": "^10.0.2",
-    "style-loader": "^1.2.1",
-    "vue-loader": "^15.9.6",
-    "vue-template-compiler": "^2.6.12",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "css-loader": "4.3.0",
+    "html-webpack-plugin": "4.4.1",
+    "sass-loader": "10.0.2",
+    "style-loader": "1.2.1",
+    "vue-loader": "15.9.6",
+    "vue-template-compiler": "2.6.12",
+    "webpack": "4.44.2",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "3.11.0"
   },
   "author": "",
   "license": "ISC"
