--- a/player/package.json
+++ b/player/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
     "dev": "set NODE_OPTIONS=--openssl-legacy-provider && webpack-dev-server --open",
-    "build": "webpack"
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && webpack"
   },
   "dependencies": {
     "jquery": "3.5.1",
