--- a/player/package.json
+++ b/player/package.json
@@ -10,12 +10,14 @@
     "build": "set NODE_OPTIONS=--openssl-legacy-provider && webpack"
   },
   "dependencies": {
+    "element-ui": "^2.15.14",
     "jquery": "3.5.1",
     "less-loader": "^5.0.0",
     "vue": "2.6.12"
   },
   "devDependencies": {
     "css-loader": "4.3.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "4.4.1",
     "sass-loader": "10.0.2",
     "style-loader": "1.2.1",
