--- a/player/package.json
+++ b/player/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
-    "dev": "set NODE_OPTIONS=--openssl-legacy-provider && webpack-dev-server --open",
+    "dev": "set NODE_OPTIONS=--openssl-legacy-provider && webpack-dev-server --open --env.model=d",
     "build": "set NODE_OPTIONS=--openssl-legacy-provider && webpack --env.model=p"
   },
   "dependencies": {
